Fixed content overflow issue on 300% and up for depedents input question.

--- a/src/applications/financial-status-report/sass/financial-status-report.scss
+++ b/src/applications/financial-status-report/sass/financial-status-report.scss
@@ -35,9 +35,10 @@
 }
 
 .dependent-count {
-  label,
-  .usa-input-error-message {
-    width: $usa-form-width;
+  @include media($medium-screen) {
+    input {
+      max-width: fit-content;
+    }
   }
 }
 
